--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,7 @@
 <div class="login-container">
 
     <!-- كارد تسجيل الدخول -->
-    <div class="card" id="loginCard">
-       
+    <div class="card active" id="loginCard"> <!-- اضفت class active هنا -->
         <h2>تسجيل الدخول</h2>
         <form id="loginForm">
             <input type="text" name="phone" placeholder="رقم الهاتف مع رمز الدولة بدون +" required>
@@ -24,7 +23,6 @@
 
     <!-- كارد تسجيل جديد -->
     <div class="card" id="registerCard">
-       
         <h2>تسجيل جديد</h2>
         <form id="registerForm">
             <input type="text" name="name" placeholder="اسمك" required>
