--- a/public/page /home/index.html
+++ b/public/page /home/index.html
@@ -22,14 +22,14 @@
 <div id="sidebar">
   <!-- فيديو الخلفية -->
   <video autoplay muted loop>
-    <source src="../media/menu.mp4" type="video/mp4">
+    <source src="../../media/menu.mp4" type="video/mp4">
   </video>
 
   <!-- محتوى فوق الفيديو -->
   <div id="sidebar-content">
     <div>
       <div class="logo">
-        <img src="../media/logo" alt="abyys Logo">
+        <img src="../../media/logo.png" alt="abyys Logo">
       </div>
       <h2>Abyss-Api</h2>
       <ul class="menu">
@@ -48,7 +48,7 @@
 </div>
 <!-- Background Video -->
 <video id="bg-video" autoplay muted loop>
-  <source src="../media/home-bg.mp4" type="video/mp4">
+  <source src="../../media/home-bg.mp4" type="video/mp4">
   متصفحك لا يدعم عرض الفيديو
 </video>
   <!-- Hero Section -->
