--- a/public/index.html
+++ b/public/index.html
@@ -433,7 +433,7 @@ window.login = async function() {
     await signInWithEmailAndPassword(auth, email, password);
     showWelcome(`🎉 مرحبًا بك!`);
     setTimeout(()=>{
-      window.location.href = "pages/home/index.html";
+      window.location.href = "https://abyssapi.vercel.app/assets/page/home/index.html";
     }, 1500);
   } catch(error) {
     let msg = "❌ البريد أو كلمة المرور غير صحيحة";
