--- a/public/index.html
+++ b/public/index.html
@@ -262,7 +262,7 @@ body {
     <!-- تسجيل الدخول -->
     <div class="form-box" id="login-box">
       <div class="card-avatar">
-        <img src="https://files.catbox.moe/caohoh.jpg" alt="Avatar">
+        <img src="https://files.catbox.moe/rx2tvh.jpg" alt="Avatar">
       </div>
       <h2>تسجيل الدخول</h2>
       <div class="input-group">
