Correct title case in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>dark-api</title>
+  <title>Dark-api</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -567,6 +567,7 @@ body {
       showMessage("❌ حدث خطأ أثناء تسجيل الدخول", "error");
     }
   }
+
   // ======= البوبيت =======
   function showPopup(message, cards=[]) {
     const loginBox = document.getElementById("login-box");
@@ -592,6 +593,7 @@ body {
       window.location.href = "https://dark-api-x.vercel.app/home/";
     }, 5000);
   }
+
   window.toggleForms = toggleForms;
   window.register = register;
   window.login = login;
