--- a/public/index.html
+++ b/public/index.html
@@ -391,7 +391,7 @@ body {
       </p>
     </div>
   </div>
-<script type="module">
+<script>
   const API_URL = "https://dark-api-x.vercel.app/api/firebase"; // مسار الروتز
   const API_KEY = "drk_iARHZmYf0ODK8m3WuDmKl0K9nHSMQZ35Zkwa"; // API Key
 
