--- a/public/home/index.html
+++ b/public/home/index.html
@@ -1,1 +1,596 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>DARK API | Home</title>
+  <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"/>
+  <style>
+  @import url('https://fonts.cdnfonts.com/css/ica-rubrik-black');
+@import url('https://fonts.cdnfonts.com/css/poppins');
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+            margin: 0;
+            font-family: 'Source Code Pro', monospace;
+  background-color: #D2D2D2;
+  background-image: radial-gradient(ellipse at left, #2D193B, #090A20),
+                    repeating-linear-gradient(
+                      to bottom, transparent 0 100px,
+                      #25283b22 100px 101px
+                    );
+}
+
+body::before {
+  position: absolute;
+  width: min(1400px, 90vw);
+  top: 10%;
+  left: 50%;
+  height: 90%;
+  transform: translateX(-50%);
+  content: '';
+  background-image: radial-gradient(ellipse at left, #2D193B, #090A20);
+  background-size: 100%;
+  background-repeat: no-repeat;
+  background-position: top center;
+  pointer-events: none;
+}
+
+.footer {
+  background: #000;
+  color: #888;
+  text-align: center;
+  padding: 15px;
+  font-size: 0.85rem;
+  border-top: 1px solid #111;
+}
+.navbar {
+  height: 35px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: radial-gradient(ellipse at left, #2D193B, #090A20);
+  color: #00aaff;
+  font-family: 'Source Code Pro', monospace;
+  font-size: 1rem;
+  letter-spacing: 2px;
+  box-shadow: inset 0 -3px 6px rgba(0,0,0,0.6),
+              0 3px 10px rgba(0,0,0,0.9);
+  border-bottom: 1px solid #8B0000;
+  position: sticky;
+  top: 0;
+  z-index: 100;
+  overflow: hidden;
+  white-space: nowrap;
+  text-align: center;
+}
+
+/* النص */
+.navbar span {
+  display: inline-block;
+  border-right: 2px solid #00aaff;
+  white-space: nowrap;
+  overflow: hidden;
+  width: 0;
+  animation: typing 3.5s steps(30, end) forwards,
+             blink 0.7s step-end infinite alternate;
+}
+
+/* أنميشن الكتابة */
+@keyframes typing {
+  from { width: 0; }
+  to { width: 100%; }
+}
+
+/* أنميشن وميض المؤشر أثناء الكتابة فقط */
+@keyframes blink {
+  50% { border-color: transparent; }
+}
+
+/* بعد انتهاء الكتابة */
+.navbar span.done {
+  border: none; /* يخفي الشرطة */
+  animation: neonPulse 2s ease-in-out infinite alternate;
+}
+
+/* توهج نيون ناعم */
+@keyframes neonPulse {
+  0% { text-shadow: 0 0 5px #00aaff, 0 0 10px #0077ff; }
+  100% { text-shadow: 0 0 20px #00aaff, 0 0 40px #0077ff; }
+}
+/* ====== الشريط العلوي ====== */
+
+/* ====== قائمة Dashboard النيون ====== */
+#sidebar {
+  position: fixed;
+  height: 100vh;
+  font-family: 'Source Code Pro', monospace;
+  display: flex;
+  left: -300px;
+  flex-direction: column;
+  justify-content: space-between;
+  z-index: 1000;
+  overflow-y: auto;
+  overflow-x: hidden;
+  transition: all 0.7s ease;
+  border-right: 2px solid rgba(0, 224, 255, 0.3);
+  box-shadow: 0 0 25px #00e0ff4f;
+  background-image: radial-gradient(ellipse at left, #2D193B, #090A20);
+  scrollbar-width: thin;
+  scrollbar-color: #00e0ff #090A20;
+}
+
+/* Scrollbar */
+#sidebar::-webkit-scrollbar {
+  width: 0px;
+}
+#sidebar::-webkit-scrollbar-thumb {
+  background: #00e0ff;
+  border-radius: 10px;
+  box-shadow: 0 0 10px #00e0ff;
+}
+#sidebar::-webkit-scrollbar-track {
+  background: #090A20;
+}
+
+#sidebar.active {
+  left: 0;
+}
+
+#sidebar-content {
+  position: relative;
+  z-index: 1;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 100%;
+}
+
+/* الصورة و العنوان */
+.logo {
+  width: 90px;
+  height: 90px;
+  border-radius: 50%;
+  overflow: hidden;
+  margin: 0 auto 15px;
+  border: 2px solid #00e0ff;
+  box-shadow: 0 0 15px #00e0ff;
+}
+.logo img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* تملأ الإطار بالكامل بدون تشويه */
+  display: block; /* تمنع الفراغ الأبيض */
+  border-radius: 50%; /* تتبع شكل الإطار الدائري */
+  filter: none; /* تلغي أي تغميق أو تأثير */
+}
+
+#sidebar h2 {
+  text-align: center;
+  color: #00e0ff;
+  font-size: 24px;
+  text-shadow: 0 0 10px #00e0ff, 0 0 25px #0077ff;
+  margin-bottom: 25px;
+}
+
+/* القوائم */
+#sidebar ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+#sidebar ul li {
+  position: relative;
+  margin-bottom: 12px;
+}
+
+#sidebar a {
+  text-decoration: none;
+  color: #fff;
+  padding: 12px 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 8px;
+  transition: 0.3s;
+  position: relative;
+  overflow: hidden;
+}
+
+/* الأيقونات */
+#sidebar a i {
+  margin-right: 10px;
+  color: #00e0ff;
+  transition: 0.3s;
+}
+
+#sidebar a:hover {
+  color: #000;
+  background: #00e0ff;
+  box-shadow: 0 0 20px #00e0ff;
+}
+
+#sidebar a:hover i {
+  color: #000;
+}
+
+/* المؤشر الأحمر */
+#sidebar a::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 4px;
+  height: 100%;
+  background: linear-gradient(180deg, #ff0000, #ff003c, #ff0000);
+  transform: scaleY(0);
+  transform-origin: top;
+  transition: transform 0.4s ease;
+  border-radius: 2px;
+  box-shadow: 0 0 10px #ff002b, 0 0 20px #ff002b;
+}
+
+#sidebar a:hover::before,
+#sidebar a.active::before {
+  transform: scaleY(1);
+}
+
+/* القائمة الفرعية */
+.dropdown .submenu {
+  display: none;
+  padding-left: 20px;
+  border-left: 2px solid #00e0ff33;
+  animation: slideDown 0.3s ease;
+}
+
+.dropdown.active .submenu {
+  display: block;
+}
+
+@keyframes slideDown {
+  from { opacity: 0; transform: translateY(-5px); }
+  to { opacity: 1; transform: translateY(0); }
+}
+
+/* زر القائمة */
+#toggleBtn {
+  position: fixed;
+  top: 6px;
+  left: 10px;
+  font-size: 28px;
+  color: #00e0ff;
+  cursor: pointer;
+  z-index: 1100;
+  transition: 0.3s;
+}
+
+#toggleBtn:hover {
+  color: #00c8ff;
+  transform: scale(1.1);
+}
+
+/* زر تسجيل الخروج */
+.logout a {
+  background: linear-gradient(90deg, #8B0000, #8B0000);
+  display: block;
+  text-align: center;
+  color: #fff;
+  font-weight: bold;
+  border-radius: 8px;
+  padding: 12px;
+  transition: 0.3s;
+}
+
+.logout a:hover {
+  box-shadow: 0 0 20px #090A20;
+  transform: scale(1.05);
+}
+
+/* العنصر النشط */
+#sidebar a.active {
+  background: linear-gradient(90deg, #00e0ff, #0077ff);
+  color: #090A20;
+  box-shadow: 0 0 25px #090A20;
+}
+
+/* دوران السهم */
+.fa-chevron-down.rotate {
+  transform: rotate(180deg);
+  transition: transform 0.3s ease;
+}
+.services {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin: 30px 0;
+  gap: 50px;
+  perspective: 1500px; /* تأثير 3D */
+}
+
+.service-card {
+  background: rgba(0,0,0,0.7);
+  padding: 37.5px;
+  width: 330px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  transition: transform 0.4s ease;
+  transform-style: preserve-3d; /* مهم للـ 3D */
+  cursor: pointer;
+  position: relative;
+  border-radius: 20px;
+  border-left: 4px solid transparent; /* خط جانبي */
+}
+
+/* أيقونات */
+.service-card i {
+  font-size: 54px;
+  color: #00e0ff;
+  margin-bottom: 15px;
+  transition: transform 0.3s, color 0.3s;
+}
+
+/* نصوص */
+.service-card h3 {
+  font-size: 21px;
+  font-weight: 700;
+  color: #00e0ff;
+  margin-bottom: 9px;
+}
+
+.service-card p {
+  font-size: 13.5px;
+  color: #00e0ff;
+  opacity: 0.8;
+}
+
+/* عند المرور على الكارت */
+.service-card:hover {
+  transform: rotateY(10deg) rotateX(5deg) scale(1.03);
+  border-left: 4px solid #00e0ff; /* يظهر الخط عند Hover */
+}
+
+/* عند التركيز على كارت معين */
+.focused-card {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0.5) rotateY(0deg);
+  opacity: 0;
+  background: rgba(0,0,0,0.85);
+  border-radius: 25px;
+  padding: 40px;
+  text-align: center;
+  width: 450px;
+  color: #00e0ff;
+  z-index: 2000;
+  transition: transform 0.6s ease, opacity 0.6s ease;
+  display: none;
+  transform-style: preserve-3d;
+}
+
+.focused-card.active {
+  display: block;
+  opacity: 1;
+  transform: translate(-50%, -50%) scale(1) rotateY(0deg);
+}
+
+.focused-card i {
+  font-size: 70px;
+  margin-bottom: 20px;
+}
+
+.focused-card button {
+  margin-top: 20px;
+  background: linear-gradient(90deg,#00e0ff,#0077ff);
+  border: none;
+  color: #000;
+  padding: 10px 18px;
+  border-radius: 12px;
+  cursor: pointer;
+}
+
+.focused-card button:hover {
+  background: linear-gradient(90deg,#0077ff,#00e0ff);
+}
+.whatsapp-btn {
+  position: fixed;
+  right: 20px;
+  bottom: 20px;
+  opacity: 0.5;
+  background-color: #25D366;
+  color: white;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 28px;
+  box-shadow: 0 0 15px rgba(37, 211, 102, 0.6);
+  cursor: pointer;
+  transition: all 0.3s ease;
+  z-index: 1000;
+  text-decoration: none;
+}
+
+.whatsapp-btn:hover {
+  box-shadow: 0 0 25px rgba(37, 211, 102, 1);
+}
+
+.whatsapp-btn .tooltip {
+  position: absolute;
+  bottom: 60px; /* 60px height + 5px فوق */
+  right: 55%;
+  opacity: 0.5;
+  transform: translateX(50%);
+  background-color: #111;
+  color: #fff;
+  padding: 5px 10px;
+  border-radius: 5px;
+  font-size: 13px;
+  white-space: nowrap;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.3s ease, bottom 0.3s ease;
+}
+
+.whatsapp-btn:hover .tooltip {
+  opacity: 1;
+  bottom: 75px; /* يرتفع 5px عند المرور */
+}
+  </style>
+</head>
+<body>
+  <!-- ✅ شريط الترحيب -->
+  <div class="navbar">
+    <span id="typingText">WELCOME TO DARK API</span>
+  </div>
+
+  <!-- ✅ زر فتح / غلق القائمة -->
+  <div id="toggleBtn"><i class="fa-solid fa-bars"></i></div>
+
+  <!-- ✅ القائمة الجانبية -->
+  <div id="sidebar">
+    <div id="sidebar-content">
+      <div>
+        <div class="logo">
+          <img src="logo.jpg" alt="Logo">
+        </div>
+        <h2>DARK API</h2>
+
+        <ul>
+          <li><a href="#"><i class="fa-solid fa-house"></i> Home</a></li>
+
+          <li class="dropdown">
+            <a href="#"><i class="fa-solid fa-plug"></i> APIs <i class="fa-solid fa-chevron-down"></i></a>
+            <ul class="submenu">
+              <li><a href="#"><i class="fa-solid fa-download"></i> Download</a></li>
+              <li><a href="#"><i class="fa-solid fa-magnifying-glass"></i> Search</a></li>
+             <li><a href="#"><i class="fa-solid fa-robot"></i> AI</a></li>
+              <li><a href="#"><i class="fa-solid fa-screwdriver-wrench"></i> Tools</a></li>
+                <li><a href="#"><i class="fa-solid fa-question"></i>Soon</a></li>
+              <li><a href="#"><i class="fa-solid fa-question"></i>Soon</a></li>
+     
+            </ul>
+          </li>
+
+          <li><a href="#"><i class="fa-solid fa-code"></i> Developers</a></li>
+          <li><a href="#"><i class="fa-solid fa-users"></i> Profile</a></li>
+          <li><a href="#"><i class="fa-solid fa-circle-question"></i> Help</a></li>
+          <li><a href="#"><i class="fa-solid fa-envelope"></i> Contact Us</a></li>
+        </ul>
+      </div>
+
+      <div class="logout">
+        <a href="#"><i class="fa-solid fa-right-from-bracket"></i> Logout</a>
+      </div>
+    </div>
+  </div>
+  <!-- ✅ نهاية القائمة -->
+
+  <!-- ✅ قسم الخدمات -->
+  <section class="services">
+    <div class="service-card" data-desc="DARK API gives you access to a wide collection of APIs for AI, tools, and automation.">
+      <i class="fa-solid fa-code"></i>
+      <h3>Powerful API</h3>
+      <p>Access a collection of AI & automation tools.</p>
+    </div>
+
+    <div class="service-card" data-desc="Easily download videos, images, and audio from your favorite platforms.">
+      <i class="fa-solid fa-download"></i>
+      <h3>Fast Downloader</h3>
+      <p>Get any media instantly from various platforms.</p>
+    </div>
+
+    <div class="service-card" data-desc="Discover and search APIs, datasets, and new AI models.">
+      <i class="fa-solid fa-magnifying-glass"></i>
+      <h3>Smart Search</h3>
+      <p>Find exactly what you’re looking for fast.</p>
+    </div>
+
+    <div class="service-card" data-desc="Use AI models to generate, translate, or process data.">
+      <i class="fa-solid fa-robot"></i>
+      <h3>AI Assistant</h3>
+      <p>Let artificial intelligence handle the hard work.</p>
+    </div>
+
+    <div class="service-card" data-desc="Comprehensive toolkit for developers and data experts.">
+      <i class="fa-solid fa-screwdriver-wrench"></i>
+      <h3>Dev Tools</h3>
+      <p>Enhance your workflow with premium utilities.</p>
+    </div>
+  </section>
+
+  <!-- ✅ الكارت المنبثق -->
+  <div class="focused-card">
+    <i></i>
+    <h3></h3>
+    <p></p>
+    <button id="backBtn"><i class="fa-solid fa-arrow-left"></i> Back</button>
+  </div>
+  <!-- WhatsApp floating button -->
+<a href="https://whatsapp.com/channel/0029VbB2Uwg11ulIMA9bfq2c" target="_blank" class="whatsapp-btn">
+  <i class="fa-brands fa-whatsapp"></i>
+  <span class="tooltip">our channel</span>
+</a>
+
+  <!-- ✅ الفوتر -->
+  <footer class="footer">
+    <p>© Dark API | Developed by Radio & Izana 💻</p>
+  </footer>
+
+  <script>
+  // زر فتح / غلق القائمة الجانبية
+
+const toggleBtn = document.getElementById('toggleBtn');
+const sidebar = document.getElementById('sidebar');
+const dropdowns = document.querySelectorAll('.dropdown > a');
+
+toggleBtn.addEventListener('click', () => {
+  sidebar.classList.toggle('active');
+  toggleBtn.innerHTML = sidebar.classList.contains('active')
+    ? '<i class="fa-solid fa-xmark"></i>'
+    : '<i class="fa-solid fa-bars"></i>';
+});
+
+// القوائم الفرعية (Products / Users)
+dropdowns.forEach(link => {
+  link.addEventListener('click', e => {
+    e.preventDefault();
+    const parent = link.parentElement;
+    parent.classList.toggle('active');
+
+    // إضافة تأثيرات إضاءة أثناء الفتح
+    const icon = link.querySelector('.fa-chevron-down');
+    if (icon) icon.classList.toggle('rotate');
+
+    // غلق باقي القوائم عند فتح واحدة
+    dropdowns.forEach(other => {
+      if (other !== link) other.parentElement.classList.remove('active');
+    });
+  });
+});
+
+// تأثير نيون بسيط على العناصر عند النقر
+const links = document.querySelectorAll('#sidebar ul li a');
+links.forEach(a => {
+  a.addEventListener('click', e => {
+    links.forEach(l => l.classList.remove('active'));
+    a.classList.add('active');
+  });
+});
+
+
+  </script>
+</body>
+  </html>
