--- a/public/index.html
+++ b/public/index.html
@@ -80,6 +80,6 @@
     </div>
 
   </div>
-  <script src="/main.js"></script>
+  <script src="https://dark-api-x.vercel.app/main.js"></script>
 </body>
 </html>
