--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dark-api</title>
-<link rel="stylesheet" href="/style.css">
+<link rel="stylesheet" href="https://dark-api-x.vercel.app/style.css">
   <!-- خطوط وخط أيقونات -->
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -80,6 +80,6 @@
     </div>
 
   </div>
-  <script src="/main.js"></script>
+  <script src="https://dark-api-x.vercel.app/main.js"></script>
 </body>
 </html>
