--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dark-api</title>
-<link rel="stylesheet" href="https://dark-api-x.vercel.app/style.css">
+  <title>Dark API</title>
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="/style.css">
+
   <!-- خطوط وخط أيقونات -->
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -80,6 +83,8 @@
     </div>
 
   </div>
-  <script src="https://dark-api-x.vercel.app/main.js"></script>
+
+  <!-- JS -->
+  <script src="/main.js"></script>
 </body>
 </html>
