Update By «-  Shawaza  -» :    app.html

--- a/src/public/html/app.html
+++ b/src/public/html/app.html
@@ -590,7 +590,7 @@ body {
     // إزالة البوبيت بعد 5 ثواني والتحويل
     setTimeout(() => {
       popup.remove();
-      window.location.href = "https://dark-api-x.vercel.app/home/";
+      window.location.href = "/home";
     }, 5000);
   }
 
