--- a/src/public/html/app.html
+++ b/src/public/html/app.html
@@ -147,7 +147,7 @@
   <div id="sidebar">
     <div id="sidebar-content">
       <div>
-        <div class="logo"><img src="logo.jpg" alt="Logo"></div>
+        <div class="logo"><img src="https://files.catbox.moe/rx2tvh.jpg" alt="Logo"></div>
         <h2>DARK API</h2>
         <ul>
           <li><a href="#"><i class="fa-solid fa-house"></i> Home</a></li>
