--- a/src/public/html/Ai.html
+++ b/src/public/html/Ai.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -17,7 +17,7 @@
     <div id="sidebar-content">
       <div>
         <div class="logo">
-          <img src="logo.jpg" alt="Logo">
+          <img src="https://files.catbox.moe/rx2tvh.jpg" alt="Logo">
         </div>
         <h2>DARK API</h2>
 
@@ -27,11 +27,11 @@
           <li class="dropdown">
             <a href="#"><i class="fa-solid fa-plug"></i> APIs <i class="fa-solid fa-chevron-down"></i></a>
             <ul class="submenu">
-              <li><a href="download.html"><i class="fa-solid fa-download"></i> Download</a></li>
-              <li><a href="search.html"><i class="fa-solid fa-magnifying-glass"></i> Search</a></li>
-              <li><a href="Ai.html"><i class="fa-solid fa-robot"></i> AI</a></li>
-              <li><a href="tools.html"><i class="fa-solid fa-screwdriver-wrench"></i> Tools</a></li>
-              <li><a href="#"><i class="fa-solid fa-question"></i> Soon</a></li>
+              <li><a href="https://dark-api-x.vercel.app/page/download"><i class="fa-solid fa-download"></i> Download</a></li>
+              <li><a href="https://dark-api-x.vercel.app/page/search"><i class="fa-solid fa-magnifying-glass"></i> Search</a></li>
+              <li><a href="https://dark-api-x.vercel.app/page/Ai"><i class="fa-solid fa-robot"></i> AI</a></li>
+              <li><a href="https://dark-api-x.vercel.app/page/tools"><i class="fa-solid fa-screwdriver-wrench"></i> Tools</a></li>
+           <li><a href="#"><i class="fa-solid fa-question"></i> Soon</a></li>
               <li><a href="#"><i class="fa-solid fa-question"></i> Soon</a></li>
        </ul>
           </li>
@@ -111,7 +111,7 @@
         <li>gpt-5</li>
         <li>neno bnanna</li>
         <li>fulx</li>
-        <li>to pixal</li>
+        <li>deepseek_chat</li>
         <li>more</li>
       </ul>
     </div>
