--- a/src/public/html/app.html
+++ b/src/public/html/app.html
@@ -154,10 +154,12 @@
           <li class="dropdown">
             <a href="#"><i class="fa-solid fa-plug"></i> APIs <i class="fa-solid fa-chevron-down"></i></a>
             <ul class="submenu">
-              <li><a href="https://dark-api-x.vercel.app/download"><i class="fa-solid fa-download"></i> Download</a></li>
-              <li><a href="#"><i class="fa-solid fa-magnifying-glass"></i> Search</a></li>
-              <li><a href="#"><i class="fa-solid fa-robot"></i> AI</a></li>
-              <li><a href="#"><i class="fa-solid fa-screwdriver-wrench"></i> Tools</a></li>
+              <li><a href="https://dark-api-x.vercel.app/page/download"><i class="fa-solid fa-download"></i> Download</a></li>
+              <li><a href="https://dark-api-x.vercel.app/page/search"><i class="fa-solid fa-magnifying-glass"></i> Search</a></li>
+              <li><a href="https://dark-api-x.vercel.app/page/Ai"><i class="fa-solid fa-robot"></i> AI</a></li>
+              <li><a href="https://dark-api-x.vercel.app/page/tools"><i class="fa-solid fa-screwdriver-wrench"></i> Tools</a></li>
+           <li><a href="#"><i class="fa-solid fa-question"></i> Soon</a></li>
+              <li><a href="#"><i class="fa-solid fa-question"></i> Soon</a></li>
             </ul>
           </li>
           <li><a href="#"><i class="fa-solid fa-code"></i> Developers</a></li>
